--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PyCity Schools\n",
     "## Analysis\n",
-    "Using the data provided, we have compared math and reading outcomes across schools within PyCity based on several categories: by School Budget, by School Size, and by School Type (Charter vs. District). Data ranges for the budget per-capita (student) were pre-selected at less than $585, between $585-630, $630-645, and $645-680. Data Ranges for school size were pre-selected at \"Small\" (<1000), \"Medium\" (1000-2000), and \"Large\" (2000-5000). School types were broken down by District vs Charter school. Passing scores are considered as a minimum C- (70%) or better grade for this analysis.\n",
+    "Using the data provided, we have compared math and reading outcomes across schools within PyCity based on several categories: by School Budget, by School Size, and by School Type (Charter vs. District). Data ranges for the budget per-capita (student) were pre-selected at less than \$585, between \$585-630, \$630-645, and \$645-680. Data Ranges for school size were pre-selected at \"Small\" (<1000), \"Medium\" (1000-2000), and \"Large\" (2000-5000). School types were broken down by District vs Charter school. Passing scores are considered as a minimum C- (70%) or better grade for this analysis.\n",
     "\n",
     "Data includes figures for the whole city, figures broken down by school, and figures broken down by the categories as described above.\n",
     "\n",
@@ -18,7 +18,7 @@
     "* Unilaterally, Charter schools outperform District schools in test results and overall percentages of passing grades\n",
     "* On average, larger schools perform worse than medium and small schools (as defined above)\n",
     "* Ostensibly, average test scores negatively correlate with per-student spending.\n",
-    "    * It is the belief on the analyst that further investigation is required to rule out any hidden variables and establish causal relationships.\n"
+    "It is the belief of the analyst that further investigation is required to rule out any hidden variables and establish causal relationships between the above variables.\n"
    ]
   },
   {
